docs: prefer /opt/homebrew in examples

--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -17,25 +17,25 @@ Homebrew package definition that builds from upstream sources
 Homebrew package definition that installs macOS native applications
 .TP
 \fBprefix\fP
-path in which Homebrew is installed, e\.g\. \fB/usr/local\fP
+path in which Homebrew is installed, e\.g\. \fB/opt/homebrew\fP or \fB/home/linuxbrew/\.linuxbrew\fP
 .TP
 \fBkeg\fP
-installation destination directory of a given \fBformula\fP version, e\.g\. \fB/usr/local/Cellar/foo/0\.1\fP
+installation destination directory of a given \fBformula\fP version, e\.g\. \fB/opt/homebrew/Cellar/foo/0\.1\fP
 .TP
 \fBrack\fP
-directory containing one or more versioned \fBkegs\fP, e\.g\. \fB/usr/local/Cellar/foo\fP
+directory containing one or more versioned \fBkegs\fP, e\.g\. \fB/opt/homebrew/Cellar/foo\fP
 .TP
 \fBkeg\-only\fP
 a \fBformula\fP is \fIkeg\-only\fP if it is not symlinked into Homebrew\[u2019]s prefix
 .TP
 \fBopt prefix\fP
-a symlink to the active version of a \fBkeg\fP, e\.g\. \fB/usr/local/opt/foo\fP
+a symlink to the active version of a \fBkeg\fP, e\.g\. \fB/opt/homebrew/opt/foo\fP
 .TP
 \fBCellar\fP
-directory containing one or more named \fBracks\fP, e\.g\. \fB/usr/local/Cellar\fP
+directory containing one or more named \fBracks\fP, e\.g\. \fB/opt/homebrew/Cellar\fP
 .TP
 \fBCaskroom\fP
-directory containing one or more named \fBcasks\fP, e\.g\. \fB/usr/local/Caskroom\fP
+directory containing one or more named \fBcasks\fP, e\.g\. \fB/opt/homebrew/Caskroom\fP
 .TP
 \fBexternal command\fP
 \fBbrew\fP subcommand defined outside of the Homebrew/brew GitHub repository
