dev-cmd/pr-upload: allow --keep-old with --upload-only

--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -1634,7 +1634,7 @@ Comma\-separated list of workflows which can be ignored if they have not been ru
 Apply the bottle commit and publish bottles to a host\.
 .TP
 \fB\-\-keep\-old\fP
-If the formula specifies a rebuild version, attempt to preserve its value in the generated DSL\.
+If the formula specifies a rebuild version, attempt to preserve its value in the generated DSL\. When using GitHub Packages, this also appends the manifest to the existing list\.
 .TP
 \fB\-n\fP, \fB\-\-dry\-run\fP
 Print what would be done rather than doing it\.
