docs: run `brew generate-man-completions`
Signed-off-by: Patrick Linnane <patrick@linnane.io>

--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -1041,7 +1041,7 @@ Evaluate all available formulae and casks, whether installed or not, to audit th
 Run various additional style checks to determine if a new formula or cask is eligible for Homebrew\. This should be used when creating new formulae or casks and implies \fB\-\-strict\fP and \fB\-\-online\fP\&\.
 .TP
 \fB\-\-[no\-]signing\fP
-Audit for app signing, which is required by macOS on ARM\.
+Audit for app signatures, which are required by macOS on ARM\.
 .TP
 \fB\-\-token\-conflicts\fP
 Audit for token conflicts\.
